--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,10 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LOGIN"
-        android:onClick="doclick"/>
+    <include
+        layout="@layout/include_login_header"
+        android:id="@+id/include_login_header"/>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/include_login_header"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp">
+        
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="IEEE Login"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/activity_login_login"/>
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="IEEE Register"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/activity_login_register"/>
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Facebook Login"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/activity_login_facebook"/>
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Google Login"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/activity_login_google"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
