Login Activity Created using fragments

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,25 +24,26 @@
             android:layout_height="wrap_content"
             android:text="IEEE Login"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/activity_login_login"/>
+            android:onClick="gotoLoginNarrowActivity"
+            android:id="@+id/btn_ieeelogin"/>
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="IEEE Register"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/activity_login_register"/>
+            android:id="@+id/btn_ieeeregister"/>
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Facebook Login"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/activity_login_facebook"/>
+            android:id="@+id/btn_faceboooklogin"/>
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Google Login"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/activity_login_google"/>
+            android:id="@+id/btn_googlelogin"/>
 
     </LinearLayout>
 
