Changing User(model class) from Java to Kotlin

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,6 +11,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mainactivity_framelayout"></FrameLayout>
+        android:id="@+id/mainactivity_framelayout">
+
+    </FrameLayout>
 
 </RelativeLayout>
