--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.example.ravneet.ieeedtu.activities.NotificationActivity">
 
+    <include
+        layout="@layout/include_ieee_header"/>
+
     <TextView
         android:layout_width="match_parent"
+        android:textSize="20dp"
         android:layout_height="wrap_content"
-        android:text="NOtification"/>
+        android:text="Notification"/>
 
 </LinearLayout>
