--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
             android:title="Biweekly Article"/>
 
         <item
-            android:id="@+id/nav_newsfeed"
+            android:id="@+id/nav_memberonly"
             android:title="IEEE Members" />
 
     </group>
