--- a/app/src/main/res/layout/activity_event_notification.xml
+++ b/app/src/main/res/layout/activity_event_notification.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.ravneet.ieeedtu.PrivateActivity.EventNotification">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EVENT Notification"/>
+
 </LinearLayout>
