--- a/app/src/main/res/layout/activity_ieeecouncil.xml
+++ b/app/src/main/res/layout/activity_ieeecouncil.xml
@@ -4,11 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.activities.IEEECouncilActivity">
+
+    <include
+        layout="@layout/include_ieee_header"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:text="IEEE Council"/>
 
 </LinearLayout>
