--- a/app/src/main/res/layout/activity_ieeecouncil.xml
+++ b/app/src/main/res/layout/activity_ieeecouncil.xml
@@ -4,16 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.activities.IEEECouncilActivity">
 
     <include
         layout="@layout/include_ieee_header"/>
 
-    <TextView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="IEEE Council"/>
+        app:cardCornerRadius="5dp"
+        android:layout_margin="7dp"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_launcher"
+                android:id="@+id/iv_PostOfMember"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Post Of Member"
+                android:textSize="28dp"
+                android:textColor="@android:color/black"
+                android:id="@+id/tv_postOfMember"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name Of Member"
+                    android:textSize="25dp"
+                    android:id="@+id/tv_nameOfMember"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Brach and Year"
+                    android:textSize="22dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
