--- a/app/src/main/res/layout/activity_biweekly_article.xml
+++ b/app/src/main/res/layout/activity_biweekly_article.xml
@@ -10,61 +10,11 @@
     <include
         layout="@layout/include_ieee_header"/>
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        app:cardCornerRadius="4dp">
+        android:layout_height="match_parent"
+        android:id="@+id/rv_biweeklyArticle">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:padding="5dp"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/pdf"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="Title Of Article"
-                android:id="@+id/tv_pdfTitle"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="2"
-                    android:orientation="horizontal">
-
-                    <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                        android:layout_weight="1"
-                    android:text="By_____________"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textSize="20dp"
-                        android:layout_weight="1"
-                        android:text="Date"/>
-                </LinearLayout>
-
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
