--- a/app/src/main/res/layout/activity_siginformation.xml
+++ b/app/src/main/res/layout/activity_siginformation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="com.example.ravneet.ieeedtu.PrivateActivity.SIGInformation">
+    tools:context="com.example.ravneet.ieeedtu.PrivateActivity.SIGInformationPost">
 
     <include
         layout="@layout/include_ieee_header"/>
