--- a/app/src/main/res/layout/activity_signotification.xml
+++ b/app/src/main/res/layout/activity_signotification.xml
@@ -11,7 +11,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="26dp"
+        android:gravity="center"
+        android:textColor="@android:color/black"
         android:text="SIG Notification"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv_sigNotificarion">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
