--- a/app/src/main/res/layout/list_item_ieeecouncil.xml
+++ b/app/src/main/res/layout/list_item_ieeecouncil.xml
@@ -1,61 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.ravneet.ieeedtu.activities.IEEECouncilActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="5dp"
+    android:layout_margin="7dp"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        app:cardCornerRadius="5dp"
-        android:layout_margin="7dp"
+        android:orientation="horizontal"
+        android:padding="10dp"
         android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_launcher"
+            android:id="@+id/iv_PostOfMember"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp"
+            android:orientation="vertical"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                android:src="@mipmap/ic_launcher"
-                android:id="@+id/iv_PostOfMember"/>
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="Post Of Member"
+                android:textSize="28dp"
+                android:textColor="@android:color/black"
+                android:id="@+id/tv_postOfMember"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Post Of Member"
-                    android:textSize="28dp"
-                    android:textColor="@android:color/black"
-                    android:id="@+id/tv_postOfMember"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Name Of Member"
+                android:textSize="25dp"
+                android:id="@+id/tv_nameOfMember"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Name Of Member"
-                    android:textSize="25dp"
-                    android:id="@+id/tv_nameOfMember"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Brach and Year"
-                    android:id="@+id/tv_YearOfMember"
-                    android:textSize="22dp"/>
-            </LinearLayout>
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Brach and Year"
+                android:id="@+id/tv_YearOfMember"
+                android:textSize="22dp"/>
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
