--- a/app/src/main/res/menu/member_only.xml
+++ b/app/src/main/res/menu/member_only.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_signotification"
+            android:title="SIG Notification" />
+        <item
+            android:id="@+id/nav_eventnotification"
+            android:title="Event Notification" />
+        <item
+            android:id="@+id/nav_chatroom"
+            android:title="Chat Room" />
+    </group>
     
 </menu>
