--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,8 @@
         android:orderInCategory="100"
         android:title="Contact Us"
         app:showAsAction="never" />
+    <item
+        android:title="Posts"
+        android:id="@+id/makePosts"
+        app:showAsAction="always"/>
 </menu>
