--- a/app/src/main/res/layout/activity_achivements.xml
+++ b/app/src/main/res/layout/activity_achivements.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ravneet.ieeedtu.activities.BiweeklyArticle">
+    tools:context="com.example.ravneet.ieeedtu.activities.Achivements">
 
     <include
         layout="@layout/include_ieee_header"/>
