--- a/app/src/main/res/layout/activity_make_member.xml
+++ b/app/src/main/res/layout/activity_make_member.xml
@@ -27,11 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Year And Branch"
-            android:id="@+id/et_MakeMemberYera"/>
+            android:textSize="25dp"
+            android:id="@+id/et_MakeMemberYear"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email ID"
+            android:textSize="25dp"
             android:id="@+id/et_MakeMemberEmailID"/>
 
         <Button
