--- a/app/src/main/res/layout/activity_make_posts.xml
+++ b/app/src/main/res/layout/activity_make_posts.xml
@@ -27,5 +27,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Post Achivement"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="MemberShip"
+        android:id="@+id/btn_membership"/>
 
 </LinearLayout>
