--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,11 +8,45 @@
     tools:context="com.example.ravneet.ieeedtu.activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mainactivity_framelayout">
+        android:id="@+id/mainactivity_linerlayout"
+        android:orientation="vertical">
 
-    </FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:textColor="@android:color/black"
+            android:gravity="center_horizontal"
+            android:text="ABOUT IEEE DTU"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22dp"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:text="IEEE DTU, the oldest student branch in Delhi Section of the Asia Pacific Region is devoted to its aim of instilling scientific temperament in the student community through a plethora of activities around the year. It boasts of the largest number of student members in Delhi Section."/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Awards"
+            android:textColor="@android:color/black"
+            android:gravity="center_horizontal"
+            android:textSize="30dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22dp"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:text="The Darrel Chong Student Activity Award 2013, 2014 and 2015.
+Most Innovative Student Branch and Award 2012"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
