--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -10,10 +10,10 @@
     <include
         layout="@layout/include_ieee_header"/>
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:textSize="20dp"
-        android:layout_height="wrap_content"
-        android:text="Notification"/>
+        android:layout_height="match_parent"
+        android:id="@+id/rv_publicNotification">
 
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
