Added Message Adapter

--- a/app/src/main/res/layout/activity_ieeecouncil_post.xml
+++ b/app/src/main/res/layout/activity_ieeecouncil_post.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.example.ravneet.ieeedtu.MakingPosts.IEEECouncilPost">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
 
     <include
         layout="@layout/include_ieee_header"/>
@@ -32,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:id="@+id/btn_IEEEMemberImage"
         android:text="Attach Image"/>
     <Button
         android:layout_width="match_parent"
@@ -40,4 +46,19 @@
         android:id="@+id/btn_PostMemberInfo"
         android:text="Post Information"/>
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/iv_memberImage"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:text="Note : Please Upload thumbnail Size Image, above given image is for Referance. And After Everthing finals Press Post Information Button"/>
+    </LinearLayout>
+
+</ScrollView>
