--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,19 +22,18 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/include_ieee_header"
         app:menu="@menu/activity_main_drawer" />
-    
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:menu="@menu/member_only"
-        android:layout_gravity="end"
-        android:layout_marginTop="28dp"
-        app:headerLayout="@layout/nav_header_main"
-        android:fitsSystemWindows="true"
-        android:id="@+id/nav_rightview">
 
 
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_rightview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_marginTop="28dp"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header_main"
+            app:menu="@menu/member_only" />
 
-    </android.support.design.widget.NavigationView>
+
 
 </android.support.v4.widget.DrawerLayout>
