--- a/app/src/main/res/layout/activity_large_signotification.xml
+++ b/app/src/main/res/layout/activity_large_signotification.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,19 +7,19 @@
     android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.PrivateActivity.LargeSIGNotification">
 
-    <include
-        layout="@layout/include_ieee_header"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        android:padding="10dp"
         android:layout_height="match_parent">
+
+        <include
+            layout="@layout/include_ieee_header"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:text="TITLE"
         android:textSize="30dp"
         android:textColor="@android:color/black"
@@ -54,12 +54,13 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:textSize="18dp"
+            android:padding="5dp"
             android:textColor="@android:color/black"
             android:id="@+id/tv_SIGDescription"
             android:text="Description"/>
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
