--- a/app/src/main/res/layout/activity_signotification.xml
+++ b/app/src/main/res/layout/activity_signotification.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.PrivateActivity.SIGNotification">
 
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
@@ -24,3 +28,7 @@
     </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
+
+
+
+</RelativeLayout>
