--- a/app/src/main/res/layout/activity_event_notification.xml
+++ b/app/src/main/res/layout/activity_event_notification.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.PrivateActivity.EventNotification">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
 
     <include
         layout="@layout/include_ieee_header"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:textColor="@android:color/black"
 
-        android:text="EVENT Notification"/>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rv_EventNotification"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
