--- a/app/src/main/res/layout/activity_make_posts.xml
+++ b/app/src/main/res/layout/activity_make_posts.xml
@@ -39,5 +39,16 @@
         android:layout_height="wrap_content"
         android:text="Add Admin Users"
         android:id="@+id/btn_adminUser"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_marginTop="15dp"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:text="If below push button is ON than only you can ADD IEEE Council Members"/>
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/Switch"/>
 
 </LinearLayout>
