--- a/app/src/main/res/layout/activity_large_public_notification.xml
+++ b/app/src/main/res/layout/activity_large_public_notification.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="5dp"
     android:layout_height="match_parent"
     tools:context="com.example.ravneet.ieeedtu.activities.LargePublicNotification">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_margin="10dp"
         android:layout_height="match_parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textColor="@android:color/black"
-            android:textSize="30dp"
+            android:background="@color/Blue700"
+            android:textColor="@android:color/white"
+            android:textSize="25dp"
+            android:padding="2dp"
             android:id="@+id/tv_notificationTitle"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Date"
-            android:textSize="25dp"
+            android:textSize="23dp"
             android:gravity="right"
-            android:textColor="@android:color/black"
+            android:background="@color/Blue500"
+            android:textColor="@android:color/white"
+            android:padding="2dp"
             android:id="@+id/tv_notificationDate"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Body"
-            android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:padding="2dp"
+            android:background="@color/Blue300"
+            android:textColor="@android:color/white"
+            android:textSize="19dp"
             android:id="@+id/tv_notificationBody"/>
 
 
@@ -44,4 +47,4 @@
 
 
 
-</android.support.v7.widget.CardView>
+</ScrollView>
