--- a/app/src/main/res/layout/list_item_ieeecouncil.xml
+++ b/app/src/main/res/layout/list_item_ieeecouncil.xml
@@ -2,8 +2,8 @@
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
-    android:layout_margin="7dp"
+    app:cardCornerRadius="3dp"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -22,13 +22,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
+            android:layout_marginStart="8dp"
             android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Post Of Member"
-                android:textSize="28dp"
+                android:textSize="24dp"
                 android:textColor="@android:color/black"
                 android:id="@+id/tv_postOfMember"/>
 
@@ -36,15 +37,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Name Of Member"
-                android:textSize="25dp"
+                android:textSize="21dp"
+                android:textColor="@android:color/black"
                 android:id="@+id/tv_nameOfMember"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Brach and Year"
+                android:textColor="@android:color/black"
                 android:id="@+id/tv_YearOfMember"
-                android:textSize="22dp"/>
+                android:textSize="18dp"/>
         </LinearLayout>
 
     </LinearLayout>
