APP Competed  ( Bug Testing Left)

--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,11 @@
     android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.activities.ContactUs">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
     <include
         layout="@layout/include_ieee_header"/>
@@ -36,5 +41,33 @@
          android:text="For any other query
 Please write us at : contact@ieeedtu.com"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/white"
+        android:text="Membership Benifits"
+        android:gravity="center"/>
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="20dp"
+            android:textColor="@android:color/white"
+            android:text="* Get Access to Our SIGs and their Notification within APP, Private ChatRoom within IEEE-DTU APP,
+and all Internal Notifications details "/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_gravity="center"
+            android:id="@+id/iv_Contactus"
+            android:src="@drawable/trailer"
+            android:layout_weight="0.60" />
+
+    </LinearLayout>
+
+
+</ScrollView>
