--- a/app/src/main/res/layout/activity_notification2.xml
+++ b/app/src/main/res/layout/activity_notification2.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.ravneet.ieeedtu.MakingPosts.NotificationPosting">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
 
     <include
         layout="@layout/include_ieee_header"/>
@@ -24,7 +29,7 @@
         android:id="@+id/et_notificationdate"/>
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:hint="Description"
         android:layout_margin="10dp"
         android:id="@+id/et_notificationbody"
@@ -36,4 +41,6 @@
         android:text="Post Public Notification"
         android:id="@+id/btn_postnotification"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
