--- a/app/src/main/res/layout/activity_signotification.xml
+++ b/app/src/main/res/layout/activity_signotification.xml
@@ -11,6 +11,8 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
+    <include
+        layout="@layout/include_ieee_header"/>
 
     <TextView
         android:layout_width="match_parent"
