Trying Slider Card Views

--- a/app/src/main/res/layout/activity_ieeecouncil.xml
+++ b/app/src/main/res/layout/activity_ieeecouncil.xml
@@ -4,31 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context="com.example.ravneet.ieeedtu.activities.IEEECouncilActivity">
-
-    <LinearLayout
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".activities.IEEECouncilActivity">
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-
-    <include
-        layout="@layout/include_ieee_header"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rv_ieeecouncil">
-
-    </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
-
+        android:fitsSystemWindows="true">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:src="@mipmap/ic_launcher" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="330dp"
+            android:layout_gravity="bottom"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:paddingBottom="30dp"
+            android:paddingEnd="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingStart="4dp" />
+    </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
+
