--- a/app/src/main/res/layout/list_item_ieeecouncil.xml
+++ b/app/src/main/res/layout/list_item_ieeecouncil.xml
@@ -1,55 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    android:layout_margin="5dp"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".activities.IEEECouncilActivity">
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:src="@mipmap/ic_launcher"
-            android:id="@+id/iv_PostOfMember"/>
-
-        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:src="@mipmap/ic_launcher" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_marginStart="8dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Post Of Member"
-                android:textSize="24dp"
-                android:textColor="@android:color/black"
-                android:id="@+id/tv_postOfMember"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Name Of Member"
-                android:textSize="21dp"
-                android:textColor="@android:color/black"
-                android:id="@+id/tv_nameOfMember"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Brach and Year"
-                android:textColor="@android:color/black"
-                android:id="@+id/tv_YearOfMember"
-                android:textSize="18dp"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+            android:layout_height="330dp"
+            android:layout_gravity="bottom"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:paddingBottom="30dp"
+            android:paddingEnd="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingStart="4dp" />
+    </android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
